<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snow Ball</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="toggle_debug">Toggle Debug Output</string>
    <string name="player_num"></string>
    <string name="players_two">Two Players</string>
    <string name="players_three">Three Players</string>
    <string name="players_four">Four Players</string>
    <string name="select_players">Select Number of Players</string>

</resources>
