<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/new_game" android:orderInCategory="1" android:title="@string/new_game"></item>
    <item android:id="@+id/toggle_debug" android:orderInCategory="2" android:title="@string/toggle_debug"></item>
    <item android:id="@+id/player_num" android:title="@string/select_players" android:orderInCategory="3">
        <menu>
            <item android:id="@+id/players_two" android:title="@string/players_two" android:orderInCategory="1"/>
            <item android:id="@+id/players_three" android:title="@string/players_three" android:orderInCategory="2"/>
            <item android:id="@+id/players_four" android:title="@string/players_four" android:orderInCategory="3"/>
        </menu>
    </item>
    

</menu>
